change various cosmetic details